[package]
name = "splitpea-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "phm-example"
required-features = ["use-std"]
path = "src/phm-example.rs"

[dependencies]
postcard = "0.7.3"

embedded-hal = "0.2.7"
heapless = "0.7.10"

[dependencies.splitpea-icd]
path = "../splitpea-icd"

# TODO(AJM): Make this "bin only"
[dependencies.serialport]
version = "4.0.1"
optional = true

[dependencies.phm]
git = "https://github.com/jamesmunns/pretty-hal-machine.git"
rev = "f1a2ef7cbb62722ee9eb4f288da3559f9b11ad14"
optional = true

[features]
use-std = ["phm", "serialport"]
